--- a/mobile/.env
+++ b/mobile/.env
@@ -1,1 +1,3 @@
 EXPO_PUBLIC_CLERK_PUBLISHABLE_KEY=pk_test_bWVldC1wcmF3bi03NS5jbGVyay5hY2NvdW50cy5kZXYk
+
+EXPO_PUBLIC_API_URL = https://x-native-app.vercel.app/api
